tests/errors/missing-ket-backwardmode.sbl
externals (stem)
routines (f)
backwardmode ( define f as true
